force-app/main/default/objects/Especificaciones__c/Especificaciones__c.object-meta.xml
<CustomObject>
    <description>Gestionar las especificaciones de Imperquimia</description>
    <label>Especificaciones</label>
    <nameField>
        <label>Nombre de Especificaciones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Especificacion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>