force-app/main/default/objects/Especificaciones__c/fields/descripcion__c.field-meta.xml
<CustomField>
    <fullName>descripcion__c</fullName>
    <label>Observaciones</label>
    <type>TextArea</type>
</CustomField>