force-app/main/default/objects/Especificaciones__c/fields/fecha_de_especificacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_especificacion__c</fullName>
    <label>Fecha de Especificación</label>
    <type>Date</type>
</CustomField>