force-app/main/default/objects/Especificaciones__c/fields/objetivo__c.field-meta.xml
<CustomField>
    <fullName>objetivo__c</fullName>
    <label>Objetivo</label>
    <type>TextArea</type>
</CustomField>