force-app/main/default/objects/Especificaciones__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Especificacion</relationshipLabel>
    <relationshipName>Especificacion</relationshipName>
    <type>Lookup</type>
</CustomField>