force-app/main/default/objects/Especificaciones__c/fields/recomendacion_tecnica__c.field-meta.xml
<CustomField>
    <fullName>recomendacion_tecnica__c</fullName>
    <label>Recomendación Técnica</label>
    <type>TextArea</type>
</CustomField>