force-app/main/default/objects/Especificaciones__c/fields/soporte_tecnico__c.field-meta.xml
<CustomField>
    <fullName>soporte_tecnico__c</fullName>
    <label>Soporte Técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Especificación Abierta</fullName>
            </value>
            <value>
                <fullName>Especificación Realizada</fullName>
            </value>
            <value>
                <fullName>Especificación Homolagada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>