force-app/main/default/objects/Especificaciones__c/fields/tipo_de_especificacion__c.field-meta.xml
<CustomField>
    <fullName>tipo_de_especificacion__c</fullName>
    <label>Tipo de Especificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporativa</fullName>
            </value>
            <value>
                <fullName>Institucional</fullName>
            </value>
            <value>
                <fullName>Por obra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>